[package]
name = "cade_md_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.19.0"
futures-channel = "0.3.28"
futures-util = {version = "0.3.28", features = ["sink", "std"] }
tokio = {version = "1.28.1", features = ["full"]}
#tungstenite = { version = "0.19.0" }
url = "2.3.1"
axum = {version = "0.6.18", features = ["ws", "headers"]}
serde = "1.0.163"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.3"
tracing = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
futures = "0.3.28"
axum-extra = {version = "0.7.4", features = ["typed-routing"]}
axum-macros = "0.3.7"


